--- a/client/modules/core/stylesheets/_components.mainLayout.scss
+++ b/client/modules/core/stylesheets/_components.mainLayout.scss
@@ -18,4 +18,11 @@
     left: 0;
     right: 0;
   }
+
+  .main-page {
+    top: 39px;
+    height: 100%;
+    padding: 40px;
+    position: relative;
+  }
 }
