--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -124,10 +124,8 @@
 @import "{}/client/modules/core/stylesheets/components.mainLayout";
 @import "{}/client/modules/core/stylesheets/components.topNavBar";
 
-// Account
-
-// Notification
-
+// Flight Page
+@import "{}/client/modules/flight/stylesheets/components.flightItem";
 
 // Global components
 
