--- a/client/modules/flight/stylesheets/_components.flightItem.scss
+++ b/client/modules/flight/stylesheets/_components.flightItem.scss
@@ -12,7 +12,26 @@
   }
 
   &__column {
-
+    &--groups{
+        flex: 6;
+        display: flex;
+        flex-direction: column;
+    }
+    &--simple{
+      flex: 6;
+      display: flex;
+    }
+    &__list-return{
+      display: flex;
+      margin-bottom: 15px;
+      align-items: center;
+      input{
+        margin-right: 20px;
+      }
+      .flight-item__info{
+        margin-right: 10px;
+      }
+    }
   }
   &__title {
     font-size: 17px;
@@ -23,10 +42,13 @@
   }
 
   &__flight-number {
-    flex: 1;
+    flex: 2;
     display: flex;
     //align-items: center;
     justify-content: flex-start;
+    span {
+      display: block;
+    }
   }
   &__flight-selection {
     padding-right: 10px
@@ -38,23 +60,89 @@
     align-items: flex-start;
     justify-content: center;
     flex-direction: column;
+    &__time {
+      font-size: 17px;
+      font-weight: bold;
+      display: flex;
+      align-items: center;
+      width: 100%;
+      span{
+        flex: 0 0 calc(50% +  20px);
+      }
+      i{
+        color: #dedddd;
+      }
+    }
+    &__airport-name, &__airport-code {
+      color: #ababab;
+    }
+    &__duration{
+      font-size: 15px;
+    }
   }
 }
 
 .summary-section {
-  padding-left: 15px;
-  padding-bottom: 10px;
-  &__check-all {
-    padding-right: 15px;
-    font-weight: bold;
-    input {
-      margin-right: 15px;
+  border: 1px solid #dedddd;
+  font-size: 15px;
+  padding: 15px;
+  &__row{
+    border-bottom: 1px solid $zigvy-col-border;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    &:last-child{
+      border: none;
+      margin: 0px;
+      padding: 0px;
     }
   }
-  &__divide {
-    margin-right: 15px;
+  &__item {
+    display: block;
+    &__label {
+      min-width: 60px;
+      display: inline-block;
+    }
   }
-  &__count {
-    font-weight: bold;
+  &__submit {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    button {
+      width: 100%;
+    }
+  }
+}
+
+.result-section{
+  display: flex;
+  align-items: flex-start;
+  &__list {
+    flex: 4;
+    .result-section__header {
+      .flight-item {
+        border: none;
+        margin-bottom: 0;
+        .flight-item__info{
+
+        }
+        &__column__list-return{
+          margin-bottom: 0px;
+          input{
+            opacity: 0;
+          }
+        }
+      }
+    }
+  }
+  &__summary {
+    flex: 2;
+    margin-left: 10px;
+    &__title{
+      padding: 15px;
+      font-size: 17px;
+      color: $zigvy-col-brand;
+
+    }
+
   }
 }
