--- a/client/modules/flight/stylesheets/_components.flightItem.scss
+++ b/client/modules/flight/stylesheets/_components.flightItem.scss
@@ -146,3 +146,13 @@
 
   }
 }
+
+.no-data-showing {
+  display: flex;
+    flex: 1;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    margin-top: 20px;
+    color: grey;
+}
